Admin page (#48)
* Admin dashboard implementation

* Refactor admin page: remove uploads section, add search

* Lesson pagination and filtering

* Fixed errors

* 403 page

* Fix library page

* menu based on user type

* fix error

* Updated API Client

* fix frontend error

* Linted and Formatted code

---------
