# API/Controllers/LessonController.cs
@@ -1,4 +1,5 @@
 using API.DTOs;
+using API.Repositories;
 using API.Services;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
@@ -10,10 +11,10 @@ namespace API.Controllers;
 [Route("[controller]")]
 public class LessonController(ILessonService lessonService) : ControllerBase
 {
-    [HttpGet("GetAllLessons")]
-    public ActionResult<IEnumerable<LessonDto>> GetAllLessons()
+    [HttpPost("GetAllLessons")]
+    public ActionResult<IEnumerable<LessonDto>> GetAllLessons([FromBody] LessonFilter? filter)
     {
-        return Ok(lessonService.GetAllLessons());
+        return Ok(lessonService.GetAllLessons(filter));
     }
     
     [HttpGet("GetLessonsByTags")]
